--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       pointer-events: none;
     }
 
-    /* Intro Page */
     .intro-page {
       background-color: #000;
       color: #fff;
@@ -61,7 +60,6 @@
       100% { transform: scale(1); box-shadow: 0 0 10px red; }
     }
 
-    /* Heart Page */
     .heart-container {
       position: relative;
       width: 95vw;
@@ -111,6 +109,7 @@
       color: white;
       z-index: 2;
       -webkit-overflow-scrolling: touch;
+      flex-direction: column;
     }
 
     .heart-message h1 {
@@ -138,6 +137,21 @@
       font-size: 1.1rem;
       line-height: 1.6;
       white-space: pre-wrap;
+    }
+
+    .heart-image {
+      width: 100%;
+      max-width: 220px;
+      border-radius: 20px;
+      margin: 15px auto;
+      display: block;
+      box-shadow: 0 0 15px red, 0 0 25px pink;
+      animation: sparkle 2s infinite alternate;
+    }
+
+    @keyframes sparkle {
+      0% { box-shadow: 0 0 5px red; transform: scale(1); }
+      100% { box-shadow: 0 0 20px hotpink, 0 0 30px red; transform: scale(1.05); }
     }
 
     @media (max-width: 600px) {
@@ -193,6 +207,7 @@
     <div class="heart-message">
       <div>
         <h1>Happy Birthday Yuvika</h1>
+        <img src="WhatsApp Image 2025-06-30 at 23.01.23.jpeg" alt="Yuvika" class="heart-image" />
         <p id="typed-text"></p>
       </div>
     </div>
@@ -231,7 +246,7 @@ I Love You, Yuvika 🫶❤️`;
     document.getElementById("heart").classList.remove("hidden");
     startTyping();
     startConfetti();
-    document.getElementById("bg-music").play(); // Autoplay after button click
+    document.getElementById("bg-music").play();
     setInterval(() => createHeart(), 600);
   }
 
