--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="heart-message">
       <div>
         <h1>Happy Birthday Yuvika</h1>
-        <img src="WhatsApp Image 2025-06-30 at 23.01.23.jpeg" alt="Yuvika" class="heart-image" />
+        <img src="yuvika.jpeg" alt="Yuvika" class="heart-image" />
         <p id="typed-text"></p>
       </div>
     </div>
