--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@
       50% { opacity: 1; }
       100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
     }
+    .heart-image {
+  width: 100%;
+  max-width: 220px;
+  border-radius: 20px;
+  margin: 15px auto;
+  display: block;
+  box-shadow: 0 0 15px red, 0 0 25px pink;
+  animation: sparkle 2s infinite alternate;
+}
+
+@media (max-width: 600px) {
+  .heart-image {
+    max-width: 110px; /* 50% of original */
+  }
+}
   </style>
 </head>
 <body>
